[package]
name = "sbvh"
description = "An implementation of Split Bounding Volume Hierarchies"
version = "0.1.0"
edition = "2018"
authors = ["Maxwell Beck <max@ryt.one>"]
repository = "https://github.com/rytone/sbvh"
license = "MIT OR Apache-2.0"

[dependencies]
mint = "0.5"
rayon = "1.5"

[dev-dependencies]
bvh = "0.5"
criterion = "0.3"
obj = "0.10"

[[bench]]
name = "build"
harness = false
