[package]
name = "sbvh"
description = "An implementation of Split Bounding Volume Hierarchies"
version = "0.1.0"
edition = "2018"
authors = ["Maxwell Beck <max@ryt.one>"]
repository = "https://github.com/rytone/sbvh"
license = "MIT OR Apache-2.0"

[dependencies]
cfg-if = "1"
mint = "0.5"
rayon = { version = "1.5", optional = true }

[dev-dependencies]
bvh = "0.5"
criterion = "0.3"
obj = "0.10"

[features]
default = ["rayon"]

[[bench]]
name = "build"
harness = false
